--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -6,7 +6,7 @@
     <head th:insert="~{import :: head}"></head>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.15.5/dist/bootstrap-table.min.css">
 </head>
-<body>
+<body style="overflow-x: hidden">
 <div th:insert="~{head :: nav}"></div>
 <div class="container-fluid main">
     <table id="table" class="table text-nowrap"></table>
