--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -6,26 +6,30 @@ body {
 
 .main {
     background-color: white;
-    width: 1000px;
+    /* width: 1000px; */
+    /* margin: 0 430px; */
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
+
 .side {
-    margin: 5px 0;
+margin: 5px 0;
 }
 
 .btn-publish {
-    float: right;
-    margin-bottom: 15px;
+float: right;
+margin-bottom: 15px;
 }
 
 .media-object {
-    width: 38px;
-    height: 38px;
+width: 38px;
+height: 38px;
 }
 
 /*
 .media-body {
-    padding-top: 10px;
+padding-top: 10px;
 }
 */
 
@@ -143,7 +147,7 @@ body {
 
 
 .footer {
-    width: 100%;
+    /*width: 100%;*/
     margin: 10px;
     line-height: 88px;
     text-align: center;
@@ -281,4 +285,25 @@ body {
 }
 #myModal2 .modal-body .form-control{
     margin-left:-30px;
+}
+
+.table-content-max-width{
+     overflow: hidden;
+     max-width: 350px;
+     text-overflow:ellipsis;
+     white-space: nowrap;
+ }
+
+.table-title-max-width{
+    overflow: hidden;
+    max-width: 100px;
+    text-overflow:ellipsis;
+    white-space: nowrap;
+}
+
+.table-label-max-width{
+    overflow: hidden;
+    max-width: 100px;
+    text-overflow:ellipsis;
+    white-space: nowrap;
 }
